test/datalog_tests/strings.fail.ast.expected
error: failed to parse input file: "./test/datalog_tests/strings.fail.dl" (line 5, column 28):
unexpected ";"
expecting literal string
"./test/datalog_tests/strings.fail.dl" (line 5, column 27):
unexpected end of input
expecting letter or digit, "_", operator, "+", "-" or "}"

error: ./test/datalog_tests/strings.fail.dl:4.18-4.19: integer value '2' is used in a context where type 'string' is expected
    var b = "" > 2;
                 ^

error: ./test/datalog_tests/strings.fail.dl:4.19-4.20: integer value '2' is used in a context where type 'string' is expected
    var c = "" != 2;
                  ^

error: ./test/datalog_tests/strings.fail.dl:4.13-4.21: Type mismatch:
expected type: bool
actual type: string
in
expression '"string"'
    var s = "string";
            ^^^^^^^^

error: ./test/datalog_tests/strings.fail.dl:7.18-7.19: Cannot find declaration of function 'to_string(Type1): string' needed to convert expression 'x' to string
    var err = "${x}"; // don't know how to convert x to string
                 ^

error: ./test/datalog_tests/strings.fail.dl:6.24-6.28: Unknown variable: str1
    var err = "${str2++str1}"; // str1 is not declared in this scope
                       ^^^^

error: ./test/datalog_tests/strings.fail.dl:16.52-16.53: Cannot find declaration of function 'to_string(serializable_t): string' needed to convert expression 'e' to string
    var err = "a=${a}, b=${b}, c=${c}, d=${d}, e:${e}";
                                                   ^
